.kustomize/media/bazarr/resources/ingress.yaml.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: media
  name: bazarr-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: bazarr.josephang.space
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: bazarr
            port:
              number: 6767
